Update index.html to fix image issues

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					</div>
 				</div>
 			</div>
-			<!-- <img id="frontImage" src="/images/frontImage.png" alt=""> -->
+			<!-- <img id="frontImage" src="images/frontImage.png" alt=""> -->
 		</div>
 	</div>
 
