Update index.html to fix image issue

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		<section id="about">
 			<h1 id="aboutTitle">About me</h1>
 			<div id="aboutInfo">
-				<img id="myImg" src="/images/mee.jpg" alt="">
+				<img id="myImg" src="images/mee.jpg" alt="">
 				<p> Experienced and customer-focused professional with a proven track record in technical support and service desk
                     roles over the past 4 years. Equipped with a strong background in office administration and customer service,
                     complemented by previous studies in IT technologies. Looking new career opportunities.</p>
